--- a/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
+++ b/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "d2315344",
    "metadata": {},
    "outputs": [],
@@ -59,10 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "d47d39bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "oneDarray = np.array([1,2,3])\n",
     "print(oneDarray)"
@@ -78,10 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "2cfdaae0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "oneDarray.shape"
    ]
@@ -96,20 +115,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "2b55beed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3316533105.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [124]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Array can also have more dimensions, say 2:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Array can also have more dimensions, say 2:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "id": "e1447887",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "twoDarray = np.array([[1, 2, 3], [4, 5, 6]])\n",
     "print(twoDarray)"
@@ -117,10 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "2f044e02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "twoDarray.shape"
    ]
@@ -137,12 +185,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "4a9ce594",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2, 3) (4, 5, 6, 7)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/w6/hzgmtvzj5v77wvm2wyhg_kvr0000gn/T/ipykernel_4108/2566889011.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  twoDarray = np.array([(1, 2, 3), (4, 5, 6, 7)])\n"
+     ]
+    }
+   ],
    "source": [
-    "twoDarray = np.array([[1, 2, 3], [4, 5, 6, 7]])\n",
+    "twoDarray = np.array([(1, 2, 3), (4, 5, 6, 7)])\n",
     "print(twoDarray)"
    ]
   },
@@ -151,17 +215,28 @@
    "id": "39bbf3b0",
    "metadata": {},
    "source": [
-    "OK What happened there? Why we cannot have a numpy array with elements of different size? Well as you can see the `print()` operation returns that the content of the array are lists. The array can only contain lists of equal size. The array creation method about (making lists and stiking thme into arrays) is suboptimal. \n",
+    "OK What happened there? Why we cannot have a numpy array with elements of different size? Well as you can see the `print()` operation returns that the content of the array are lists. The array can only contain lists of equal size. The array creation method about (making lists and sticking thme into arrays) is suboptimal. \n",
     "\n",
     "Indeed, we can try to multiple the array by `2` and the output is not what we wanted."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "62b3e3af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([(1, 2, 3, 1, 2, 3), (4, 5, 6, 7, 4, 5, 6, 7)], dtype=object)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "twoDarray*2"
    ]
@@ -189,10 +264,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b0549b63",
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "945b46ec",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 16, 20],\n",
+       "       [24, 48, 96]])"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twoDarray = np.array ([[6, 8, 10], [12, 24, 48]])\n",
+    "twoDarray*2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,12 +312,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "dec0aba8",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "AnArrayOfZeros = np.zeros(2)\n",
     "print(AnArrayOfZeros)"
@@ -241,10 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "d91a655f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "AnotherArrayOfZeros = np.zeros((2,2))\n",
     "print(AnotherArrayOfZeros)"
@@ -260,10 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "bdfc3f17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "myArray = np.zeros((3,4))\n",
     "print(myArray)"
@@ -279,10 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "07f2a38c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "myArray = np.ones((2,5))\n",
     "print(myArray)"
@@ -293,17 +421,28 @@
    "id": "b6c5e16a",
    "metadata": {},
    "source": [
-    "The arrays come with a series of methoss, built-in! For example, number of dimensions can be returned by the array using the method `.ndim`:"
+    "The arrays come with a series of methods, built-in! For example, number of dimensions can be returned by the array using the method `.ndim`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "32a0b6e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "myArray.ndim"
+    "myArray.ndim "
    ]
   },
   {
@@ -316,10 +455,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "f452fc18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 5)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.shape"
    ]
@@ -329,15 +479,26 @@
    "id": "c9d0d7a2",
    "metadata": {},
    "source": [
-    "The totla number of the elements can be returned using the method `.size`:"
+    "The total number of the elements can be returned using the method `.size`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "6803edad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.size"
    ]
@@ -349,7 +510,7 @@
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
-    "    - List the number of methods of a the numpy array myArray and return the list of number here: []"
+    "    - List the number of methods of a the numpy array myArray and return the list of number here: [2]"
    ]
   },
   {
@@ -364,11 +525,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
+   "id": "b743f098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "myArray = ([[1, 6], [8, 12], [4, 2]])\n",
+    "print(len(myArray))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "id": "e997ce7e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 6], [8, 12], [4, 2], 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myArray = ([[1, 6], [8, 12], [4, 2]])\n",
+    "myArray.append(6)\n",
+    "print (myArray)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -377,6 +569,14 @@
    "source": [
     "### `for` loops on arrays"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57fb9e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -396,10 +596,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "e1b37a43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "nRows, nCols = 10, 5   # Python let's us do this!\n",
     "myArraySize = (nRows, nCols)  # we'll make a 10x5 array. Rows always come first!\n",
@@ -550,10 +767,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "0cc5ffda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 8, 16, 32]"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ourNumbers = list()                # Make an empty Python list\n",
     "for i in range(nCols) :\n",
@@ -629,10 +857,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "18038572",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.]])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nRows, nCols = 10, 5   # Python let's us do this!\n",
     "myArraySize = (nRows, nCols)  # we'll make a 10x5 array. Rows always come first!\n",
@@ -1400,7 +1648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
