--- a/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
+++ b/tutorial011-Numpy-LoopsAndLogicalOperators.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "id": "d2315344",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "id": "d47d39bd",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "id": "2cfdaae0",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "(3,)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "id": "2b55beed",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "evalue": "invalid syntax (3316533105.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [124]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Array can also have more dimensions, say 2:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [9]\u001b[0;36m\u001b[0m\n\u001b[0;31m    Array can also have more dimensions, say 2:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "id": "e1447887",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "id": "2f044e02",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "id": "4a9ce594",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w6/hzgmtvzj5v77wvm2wyhg_kvr0000gn/T/ipykernel_4108/2566889011.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/var/folders/w6/hzgmtvzj5v77wvm2wyhg_kvr0000gn/T/ipykernel_21032/2566889011.py:1: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  twoDarray = np.array([(1, 2, 3), (4, 5, 6, 7)])\n"
      ]
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "id": "62b3e3af",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "array([(1, 2, 3, 1, 2, 3), (4, 5, 6, 7, 4, 5, 6, 7)], dtype=object)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "id": "945b46ec",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "       [24, 48, 96]])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "id": "dec0aba8",
    "metadata": {
     "scrolled": true
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "id": "d91a655f",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "id": "bdfc3f17",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "id": "07f2a38c",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "id": "32a0b6e0",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "2"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "id": "f452fc18",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "(2, 5)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "id": "6803edad",
    "metadata": {},
    "outputs": [
@@ -494,7 +494,7 @@
        "10"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 22,
    "id": "b743f098",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 23,
    "id": "e997ce7e",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "id": "e1b37a43",
    "metadata": {},
    "outputs": [
@@ -638,11 +638,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c2ddf1f1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2, 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "threeDarray = [[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2, 2]]\n",
+    "print (threeDarray)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -666,10 +677,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "5e551156",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]\n",
+      " [ 2.  4.  8. 16. 32.]]\n"
+     ]
+    }
+   ],
    "source": [
     "anArray[:,0] = 2\n",
     "anArray[:,1] = 4\n",
@@ -677,7 +705,7 @@
     "anArray[:,3] = 16\n",
     "anArray[:,4] = 32\n",
     "\n",
-    "anArray"
+    "print (anArray)"
    ]
   },
   {
@@ -702,20 +730,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "8e5b3661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.],\n",
+       "       [ 2.,  4.,  8., 16., 32.]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nRows, nCols = 10, 5   # make variables for length and width of our array\n",
     "myArraySize = (nRows, nCols)    # we'll make a 10x5 array. Rows always come first!\n",
     "ourNumbers = [2, 4, 8, 16, 32]  # numbers that we'll set each column to\n",
-    "anArray = np.zeros(myArraySize) # make an array to hold our numbers\n",
+    "anArray = np.zeros(myArraySize) # make an array to hold our numbers. # what is np.zeros, and why do we have anArraySize?\n",
     "\n",
     "for i in range(nCols) :\n",
     "    anArray[:,i] = ourNumbers[i]\n",
     "    \n",
     "anArray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78587000",
+   "metadata": {},
+   "source": [
+    "np.zeros is a shape function, so in the parenthesis, you insert the desired shape you want your data to take. in the example above, np.zeros (myArraySize) is telling Python to make a data table with 10 rows and 5 columns and in each row, it will contain this data (2, 4, 6, 8, 16, 32). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f1e9f3b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.zeros?"
    ]
   },
   {
@@ -767,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 30,
    "id": "0cc5ffda",
    "metadata": {},
    "outputs": [
@@ -777,7 +843,7 @@
        "[2, 4, 8, 16, 32]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,11 +863,11 @@
    "source": [
     "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "  \n",
-    "  - Above we have used `range()`, was this the first time the function was used? [Yes/No]\n",
+    "  - Above we have used `range()`, was this the first time the function was used? [No]\n",
     "  \n",
     "  - What does the function do?\n",
     "  \n",
-    "  [Use the cell below to write your answer]\n",
+    "  [The function range selects number from one number to the other]\n",
     "  "
    ]
   },
@@ -833,11 +899,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "28911fab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 8, 16, 32]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ourNumbers = list ()\n",
+    "for i in range (nCols) : \n",
+    "    ourNumbers.append(2**(i+1))\n",
+    "ourNumbers "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -857,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 32,
    "id": "18038572",
    "metadata": {},
    "outputs": [
@@ -876,7 +958,7 @@
        "       [ 2.,  4.,  8., 16., 32.]])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,11 +1006,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "f0791254",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "27\n",
+      "125\n",
+      "343\n",
+      "729\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10,2): #range uses comma in their data\n",
+    "    cubed = i**3\n",
+    "    print (cubed)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -940,11 +1038,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "5153a2bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (838246123.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [41]\u001b[0;36m\u001b[0m\n\u001b[0;31m    for i in range (0: )\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range "
+   ]
   },
   {
    "cell_type": "markdown",
